OO-2123 make info page title smaller, fix alignment of link in course creation wizard

--- a/src/main/webapp/static/themes/light/modules/_repository.scss
+++ b/src/main/webapp/static/themes/light/modules/_repository.scss
@@ -23,8 +23,11 @@
 			}
 		}		
 		
-		h1 i {
-			display: none;
+		h1 {
+			font-size: $o-coursesite-meta-title-font-size;
+			i {
+				display: none;
+			}
 		}
 	}
 	
